# ImpactSockets

./: .gitignore  .gitmodules  CMakeLists.txt  DEVELOPER  FindImpactSockets.cmake  README.md
CMake/: Checks.cmake  Checks.cmake.save  Configuration.cmake  Dependencies.cmake  FindLibGnuTLS.cmake  FindLibUV.cmake  Functions.cmake  configure.h.in
Examples/: DemoTCPClient.cpp  DemoTCPServer.cpp  DemoWSClient.cpp  DemoWebClient.cpp  DemoWebsocketClient.cpp  DemoWebsocketServer.cpp  DisconnectingSocket.cpp  Discovery.cpp  EthernetDemo.cpp  ListInterfaces.cpp
Examples/WebsocketTestPlatform/: index.html  index.js  package.json
Libraries/ABNF_Parser/: CMakeLists.txt  main.cpp
Libraries/ABNF_Parser/UnitTests/: guts.cpp
SocketSet/Include/async/: abstract_event_loop.h  event_loop_interface.h  promise.h  tcp_client_interface.h  tcp_server_interface.h  udp_socket_interface.h  uv_event_loop.h  uv_tcp_client.h  uv_tcp_server.h  uv_udp_socket.h
SocketSet/Include/interfaces/: event_loop_interface.h  secure_client_interface.h  secure_datagram_interface.h  secure_server_interface.h  secure_types.h  secure_x509_certificate_interface.h  tcp_client_interface.h  tcp_server_interface.h  udp_socket_interface.h  uv_node_interface.h
SocketSet/Include/rfc/: md5.h  sha1.h  uri.h  utf8.h
SocketSet/Include/sockets/: async_socket.h  basic_socket.h  generic.h  gnutls_secure_client.h  gnutls_secure_datagram.h  gnutls_secure_server.h  gnutls_x509_certificate.h  networking.h  probe.h  raw_socket.h  socketstream.h  tcp_client.h  tcp_client_interface.h  tcp_server.h  tcp_server_interface.h  types.h
SocketSet/Include/utils/: bit_ops.h  case_string.h  cloneable.h  environment.h  errno.h  event_emitter.h  let.h  optional.h  regex.h  ring_buffer.h  string_ops.h  worker_thread.h
SocketSet/Source/async/: default_event_loop.cpp  promise.cpp  uv_event_loop.cpp  uv_tcp_client.cpp  uv_tcp_server.cpp  uv_udp_socket.cpp
SocketSet/Source/rfc/: sha1.cpp
SocketSet/Source/sockets/: async_socket.cpp  basic_socket.cpp  basic_socket_common.h  basic_socket_delivery.cpp  basic_socket_misc.cpp  gnutls_compatibility.cpp  gnutls_secure_client.cpp  gnutls_secure_datagram.cpp  gnutls_secure_server.cpp  gnutls_x509_certificate.cpp  networking.cpp  probe.cpp  raw_socket.cpp  socket_interface_helpers.cpp  socketstream.cpp  tcp_client.cpp  tcp_server.cpp
SocketSet/Source/utils/: case_string.cpp  event_emitter.cpp  let.cpp
Sockets/Include/: CrossPlatformSockets.h  Environment.h  Generic.h  IOContext.h  NetworkTypes.h  Networking.h  RFC2616.h  RFC6455.h  SocVersion.h  SocketHandle.h  SocketInterface.h  SocketPollTable.h  SocketProbe.h  SocketStream.h  SocketTypes.h  Sockets.h  TcpClient.h  TcpServer.h  TcpSocket.h  UdpSocket.h  WebClient.h  Websocket.h  WsClient.h  basic_socket  basic_socket.h  impact_error  io_error  io_error.h  socketstream  socketstream.h  wsmanip  wsmanip.h
Sockets/Include/Internal/: Utils.h  WebsocketUtils.h
Sockets/Include/RFC/: 2616  3174  4648  6455  Base16.h  Base64.h  Const2616.h  Const6455.h  IWebsocket.h  Message.h  RFC2616.h  RFC2616Const.h  RFC6455.h  RequestMessage.h  ResponseMessage.h  SHA1.h  String.h  StringCodec.h  URI.h  WSURI.h  Websocket.h  WebsocketClient.h  WebsocketClientNode.h  WebsocketServer.h  WebsocketServerNode.h  WebsocketUtils.h
Sockets/Include/async/: event_loop.h
Sockets/Include/placeholder/: basic_socket  networking  socketstream
Sockets/Include/rfc/: base64.h  md5.h  sha1.h  uri.h  utf8.h
Sockets/Include/sockets/: async_error.h  async_pipeline.h  basic_socket.h  environment.h  generic.h  impact_errno.h  io_error.h  networking.h  poll_vector.h  probe.h  raw_socket.h  socketstream.h  types.h
Sockets/Include/utils/: abnf_ops.h  batch.h  bit_ops.h  case_string.h  cloneable.h  environment.h  errno.h  impact_errno.h  impact_error.h  regex.h  string_ops.h  worker_thread.h
Sockets/Source/: Generic.cpp  IOContext.cpp  Networking.cpp  RFC2616.cpp  RFC6455.cpp  SocketHandle.cpp  SocketInterface.cpp  SocketInterfaceInfo.cpp  SocketPollTable.cpp  SocketProbe.cpp  SocketStream.cpp  Sockets.cpp  TcpClient.cpp  TcpServer.cpp  TcpSocket.cpp  UdpSocket.cpp  WebClient.cpp  Websocket.cpp  WsClient.cpp  async_error.cpp  async_pipeline.cpp  basic_socket.cpp  basic_socket_async.cpp  basic_socket_common.inc  basic_socket_delivery.cpp  basic_socket_misc.cpp  basic_socket_obj.cpp  generic.cpp  impact_errno.cpp  impact_error.cpp  io_error.cpp  networking.cpp  poll_vector.cpp  probe.cpp  raw_socket.cpp  socketstream.cpp  wsmanip.cpp
Sockets/Source/Internal/: WebsocketUtils.cpp
Sockets/Source/RFC/: Base16.cpp  Base64.cpp  Const2616.cpp  Const6455.cpp  Message.cpp  RFC2616.cpp  RFC2616Const.cpp  RFC6455.cpp  RequestMessage.cpp  ResponseMessage.cpp  SHA1.cpp  String.cpp  StringCodec.cpp  URI.cpp  WSURI.cpp  Websocket.cpp  WebsocketClient.cpp  WebsocketClientNode.cpp  WebsocketServer.cpp  WebsocketServerNode.cpp  WebsocketUtils.cpp  wsmanip.cpp
Sockets/Source/async/: event_loop.cpp
Sockets/Source/rfc/: base64.cpp  md5.cpp  uri.cpp  utf8.cpp
Sockets/Source/sockets/: basic_socket_delivery.cpp  generic.cpp  networking.cpp  raw_socket.cpp
Sockets/Source/utils/: case_string.cpp  errno.cpp  impact_errno.cpp  impact_error.cpp  regex.cpp  string_ops.cpp  worker_thread.cpp
Sockets/Tests/Cases/: Test_Base16.cpp  Test_Base64.cpp  Test_Const2616.cpp  Test_Const6455.cpp  Test_RFC2616.cpp  Test_RFC6455.cpp  Test_RFCWebsocket.cpp  Test_RequestMessage.cpp  Test_RequestMethod.cpp  Test_ResponseMessage.cpp  Test_SHA1.cpp  Test_URI.cpp  (+4 more)
Sockets/temp/: message.cpp  message.h  transfer_encoding.cpp  transfer_encoding.h
Tests/: async_pipeline_test.cpp  basic_socket_test.cpp  impact_error_test.cpp  networking_test.cpp  worker_thread_test.cpp
Tests/GUTs/: main.cpp
Tests/System/: test_async_pipeline.cpp  test_basic_socket.cpp  test_event_loop.cpp  test_impact_error.cpp  test_networking.cpp  test_promise.cpp  test_regex.cpp  test_tls_tcp_sockets.cpp  test_tls_udp_sockets.cpp  test_uv_event_loop.cpp  test_uv_tcp_server.cpp  test_uv_tcp_sockets.cpp  test_uv_udp_sockets.cpp  test_worker_thread.cpp
(+102 files in other folders)
